// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearOption correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ClearOption
    display="Clear"
    value=""
  >
    <Option
      className="clear-option orion-fusion-theme"
      data-terra-select-clear-option={true}
      disabled={false}
      display="Clear"
      isSelected={false}
      value=""
    >
      <li
        aria-checked={false}
        aria-disabled={false}
        aria-selected={false}
        className="option is-default orion-fusion-theme clear-option orion-fusion-theme"
        data-terra-select-clear-option={true}
        data-terra-select-option={true}
        disabled={false}
        role="option"
        tabIndex="0"
      >
        <span
          className="display"
        >
          Clear
        </span>
      </li>
    </Option>
  </ClearOption>
</ThemeContextProvider>
`;

exports[`ClearOption should render a default ClearOption 1`] = `
<li
  aria-checked={false}
  aria-disabled={false}
  aria-selected={false}
  className="option is-default clear-option"
  data-terra-select-clear-option={true}
  data-terra-select-option={true}
  disabled={false}
  role="option"
  tabIndex="0"
>
  <span
    className="display"
  >
    Clear
  </span>
</li>
`;
